Geo-Nodes: Integer socket on node-group not respected. #91862

Closed
opened 2021-10-01 01:00:40 +02:00 by Ray molenkamp · 7 comments
Member

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 3.0.0 Alpha, 66fe1c79f3
Worked: N/A

Short description of error

Node group sockets marked as integer treated as float sockets

Exact steps for others to reproduce the error

integer_socket.blend

Load attached .blend

it has the following node-group, 2 integer inputs, 1 float output, nothing fancy

{F10699311, width=100%}

Without linking the sockets the node-group works as expected when you change the values on the node it self, only integer increments allowed

{F10699295, width=100%}

However if you hook up two value nodes to the inputs like this:

{F10699343, width=100%}

The node will allow fractional numbers on the inputs, and output fractional numbers on the output, completely ignoring the integer nature of the sockets.

Expected behavior:

one of these two options

  1. Both inputs be rounded to the nearest integer towards zero

or

  1. Do not allow float sockets to be hooked up to integer inputs.

just passing them through as floats, is not OK

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 3.0.0 Alpha, 66fe1c79f3 Worked: N/A **Short description of error** Node group sockets marked as integer treated as float sockets **Exact steps for others to reproduce the error** [integer_socket.blend](https://archive.blender.org/developer/F10699369/integer_socket.blend) Load attached .blend it has the following node-group, 2 integer inputs, 1 float output, nothing fancy {[F10699311](https://archive.blender.org/developer/F10699311/image.png), width=100%} Without linking the sockets the node-group works as expected when you change the values on the node it self, only integer increments allowed {[F10699295](https://archive.blender.org/developer/F10699295/image.png), width=100%} However if you hook up two value nodes to the inputs like this: {[F10699343](https://archive.blender.org/developer/F10699343/image.png), width=100%} The node will allow fractional numbers on the inputs, and output fractional numbers on the output, completely ignoring the integer nature of the sockets. Expected behavior: one of these two options 1) Both inputs be rounded to the nearest integer towards zero or 2) Do not allow float sockets to be hooked up to integer inputs. just passing them through as floats, is not OK
Author
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @Bradley_G

Added subscriber: @Bradley_G

Just to add that this issue occurs probably in every data type. (I've)
Basically the data type setting in group output is not functioning whatsoever.
Even String will output [0,0,0].
image.png
image.png

Just to add that this issue occurs probably in every data type. (I've) Basically the data type setting in group output is not functioning whatsoever. Even String will output [0,0,0]. ![image.png](https://archive.blender.org/developer/F11376591/image.png) ![image.png](https://archive.blender.org/developer/F11376582/image.png)

This issue was referenced by b55bddde40

This issue was referenced by b55bddde40db3eda3531d98caa99be9a8e88a8ee
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-11-03 10:54:41 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91862
No description provided.